Fixed nav bar on mobile

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -40,9 +40,8 @@ $nav-padding: 1px 0
 
     @media #{$mobile}
         > .list
-            display: grid
-            grid-template-columns: repeat(2, 1fr)
-            gap: 10px
+            display: flex
+            flex-direction: column
             justify-content: center
             align-items: center
             padding: 8px 0
